--- a/src/main/resources/templates/edit_order.html
+++ b/src/main/resources/templates/edit_order.html
@@ -38,6 +38,10 @@
             </table>
         </form>
     </div>
+    <div id="footer">
+        <div id="github_img_div"><img th:src="@{/images/github.png}" width="100%" height="100%" th:onclick="linkGitHub()"></div>
+        <p>&copy 2022 July出品</p>
+    </div>
 </div>
 </body>
 </html>
