--- a/src/main/resources/static/css/add_order.css
+++ b/src/main/resources/static/css/add_order.css
@@ -13,23 +13,23 @@ body {
 
 #div_order_container {
     background-color: #f0f2f5;
-    height: 850px;
-    width: 1680px;
+    width: 100%;
+    height: 760px;
+    margin: 0 auto;
     position: relative;
-    top: 80px;
-    left: 110px;
+    /*top: 80px;*/
+    /*left: 110px;*/
 }
 
 #div_order_add {
-    position: absolute;
-    left: 340px;
-    bottom: 600px;
+    margin: 20px auto;
 }
 
 #table_order_info {
-    height: 200px;
+    height: 400px;
     width: 1000px;
-    position: absolute;
+    margin: 50px auto;
+    line-height: 50px;
 }
 
 #table_order_info, #table_order_info td, #table_order_info th {
@@ -44,11 +44,12 @@ body {
 
 #footer {
     position: absolute;
+    bottom: 20px;
+    left: 50%;
+    margin-left: -54px;
     text-align: center;
     font-size: 14px;
     color: #848587;
-    top: 793px;
-    width: 1680px;
 }
 
 #github_img_div {
