--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,8 +43,8 @@
 
 
     <div id="div_search">
-        <form method="get" th:action="@{/searchById}" id="search_by_id">
-            请输入商品id号：<input type="text" name="id"/> <input type="submit" value="根据id查询">
+        <form method="get" th:action="@{/searchById}" id="search_by_id" onsubmit="return isNumber()">
+            请输入商品id号：<input type="text" name="id" /> <input type="submit" value="根据id查询">
         </form>
         <form method="get" th:action="@{/searchByName}" id="search_by_name">
             请输入商品名称：<input type="text" name="commodityName"/> <input type="submit" value="根据商品名称查询">
